# Shardon

./: .env.example  .gitignore  AGENTS.md  CHANGES.md  Makefile  README.md  package.json  pyproject.toml
apps/admin_api/: pyproject.toml
apps/admin_api/src/shardon_admin_api/: __init__.py  main.py
apps/admin_web/: index.html  package.json  vite.config.ts
apps/admin_web/src/: App.tsx  styles.css
apps/router_api/: pyproject.toml
apps/router_api/src/shardon_router_api/: __init__.py  main.py
config/: router.yaml
config/auth/admins-available/: admin.yaml
config/auth/admins-enabled/: admin.yaml
config/backends-enabled/: mock-sglang.yaml  mock-vllm-v1.yaml  mock-vllm-v2.yaml
config/deployments-available/: chat-b.yaml
config/deployments-enabled/: chat-a.yaml  chat-b.yaml  embed-a.yaml
config/gpu-groups-available/: group-a.yaml
config/gpu-groups-enabled/: group-a.yaml  group-b.yaml
config/gpu-inventory-enabled/: gpu0.yaml  gpu1.yaml
config/models-available/: demo-chat-model.yaml  demo-embed-model.yaml
config/models-enabled/: demo-chat-model.yaml  demo-embed-model.yaml
config/policies/: scheduler.yaml
demo/runtimes/mock-sglang/: README.md  capabilities.yaml  launcher.py
demo/runtimes/mock-vllm-v1/: README.md  capabilities.yaml  (+1 more)
docs/: architecture.md  backends-outside-shardon.md  batch.md  configuration.md  debugging.md  drain.md  gpu-mapping.md  keep-free.md  scheduling.md
scripts/: bootstrap.sh  refresh_enabled_symlinks.sh  run-local.sh  run_demo.sh  validate_config.py
tests/integration/: test_api_surfaces.py  test_router_dependencies.py
(+2 files in other folders)
